--- a/miniBlackJack/Base.lproj/Main.storyboard
+++ b/miniBlackJack/Base.lproj/Main.storyboard
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="miniBlackJack" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +18,51 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="IeH-La-4Sw">
+                                <rect key="frame" x="0.0" y="28" width="600" height="397"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EzA-28-BNe">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="397"/>
+                                        <color key="backgroundColor" red="0.85152159689999996" green="0.064197786549999997" blue="0.092928462010000004" alpha="1" colorSpace="calibratedRGB"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c45-OF-e9A">
+                                        <rect key="frame" x="300" y="0.0" width="300" height="397"/>
+                                        <color key="backgroundColor" red="0.64313778519999998" green="0.96294596539999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="c45-OF-e9A" secondAttribute="height" multiplier="300:397" id="Tfp-Ax-Leh"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.85152159689999996" green="0.064197786549999997" blue="0.092928462010000004" alpha="1" colorSpace="calibratedRGB"/>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P5o-BN-N52">
+                                <rect key="frame" x="20" y="497" width="560" height="30"/>
+                                <state key="normal" title="Play Game"/>
+                                <connections>
+                                    <action selector="playButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wgd-9J-OYw"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="IeH-La-4Sw" secondAttribute="trailing" id="6uJ-GW-JSY"/>
+                            <constraint firstItem="P5o-BN-N52" firstAttribute="centerX" secondItem="IeH-La-4Sw" secondAttribute="centerX" id="JrB-L0-AP9"/>
+                            <constraint firstItem="IeH-La-4Sw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="QBc-f5-MWX"/>
+                            <constraint firstItem="P5o-BN-N52" firstAttribute="top" secondItem="IeH-La-4Sw" secondAttribute="bottom" constant="72" id="TZx-hD-E9M"/>
+                            <constraint firstItem="P5o-BN-N52" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ghy-ec-0yG"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="IeH-La-4Sw" secondAttribute="bottom" constant="175" id="qqf-IL-myu"/>
+                            <constraint firstItem="IeH-La-4Sw" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="tAx-EM-ScA"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="leftImageView" destination="EzA-28-BNe" id="GHH-jY-jDZ"/>
+                        <outlet property="rightImageView" destination="c45-OF-e9A" id="hap-S2-feV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="375"/>
         </scene>
     </scenes>
 </document>
